<resources>
    <string name="app_name">Money Tracker</string>
    <string name="splash_text">Track &amp; Save</string>
    <string name="splash_text2">Your Money</string>

    <!--   For Log In & Sign Up Page-->
    <string name="welcome_text">Welcome Back !</string>
    <string name="welcome_sub">Let’s Track Wisely</string>
    <string name="label_emil">Email*</string>
    <string name="label_password">Password*</string>
    <string name="placeholder1">Enter your email</string>
    <string name="placeholder2">Enter your password</string>
    <string name="remember">Remember me</string>
    <string name="log_btn">Log In</string>
    <string name="or_log_with">Or, Login With</string>
    <string name="signUp">Sign up with Google</string>
    <string name="have_account">Don’t have an account !</string>
    <string name="sign_title">Sign Up Account </string>
    <string name="sign_sub">Join Us &amp; Take Control of Your Finances </string>
    <string name="full_name">Full Name*</string>
    <string name="privacy_policy_text">I Have Read &amp; Agree Privacy &amp; Policy </string>
    <string name="signup_btn">Sign Up</string>

    <!--    Home Page-->
    <string name="profile_name">Devid Watt</string>
    <string name="date">2025 <br>May</br> </string>
    <string name="income">Income: </string>
    <string name="income_money">6000</string>
    <string name="expense">Expense: </string>
    <string name="expense_money">2300</string>
    <string name="Balance">10000</string>


    <!--    Add Money page-->
    <string name="add_money">Add Money </string>
    <string name="food">Food</string>
    <string name="shopping">Shopping</string>
    <string name="travel">Travel</string>
    <string name="rent">Rent</string>
    <string name="electronics">Electronics</string>
    <string name="clothing">Clothing</string>
    <string name="health">Health</string>
    <string name="pet">Pet</string>
    <string name="gifts">Gifts</string>
    <string name="phone">Phone</string>
    <string name="beauty">Beauty</string>
    <string name="social">Social</string>
    <string name="sports">Sports</string>
    <string name="bike">Bike</string>
    <string name="housing">Housing</string>
    <string name="market">Market</string>
    <string name="others">Others</string>
    <string name="add">Add</string>
    <string name="salary">Salary</string>
    <string name="investment">Investment</string>
    <string name="part_time">Part Time</string>
    <string name="bonus">Bonus</string>

    <!--    Analytics-->
    <string name="month">Month</string>
    <string name="day">Day\nMon</string>
    <string name="year">Year</string>
    <string name="total_cost">Total Cost</string>
    <string name="daily_report">Daily Report</string>
    <string name="monthly_report">Monthly Report</string>
    <string name="yearly_report">Yearly Report</string>

    <!--    Profiles-->
    <string name="profile">Profile</string>
    <string name="category">Category Settings</string>
    <string name="currency">Currency Change</string>
    <string name="notification">Notification</string>
    <string name="reminders">Reminders</string>
    <string name="budget">Budget</string>
    <string name="export_data">Export Data</string>
    <string name="Password">Change Password</string>
    <string name="register_now">Register Now</string>
    <string name="all_ready_have_an_ccount">All ready have an ccount</string>
    <string name="full_name_pl">full name</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="userName">David Watt</string>
    <string name="userEmail">david@gmail.com</string>
    <string name="currentdate">30/7/2025</string>
    <string name="balance_text">Balance</string>
    <string name="menu_home">Home</string>
    <string name="menu_charts">Charts\n</string>
    <string name="menu_report">Report\n</string>
    <string name="menu_profile">Profile</string>
    <string name="list_date">30 July, 2025</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_amount">Enter amount</string>
    <string name="calendar">📅</string>
    <string name="crossBtn">⌫</string>
    <string name="calendarBtn">📅 Today</string>
    <string name="saveBtn">✓</string>
    <string name="transactions">Transactions: </string>
    <string name="hey_dude_do_you_want_to_delete_your_money_tracking_all_data_then_hit_on_the_delete_button_amp_delete_all_data"><![CDATA[Hey Dude, Do you want to delete your money tracking all data?Then Hit On the delete button & delete all data.]]></string>
    <string name="if_you_delete_all_data_you_can_t_able_to_download_and_find_your_pervious_data">If you delete all data. You can’t able to download and find your pervious data</string>
    <string name="delete_all_data">Delete All Data</string>
    <string name="add_category">Add Category</string>
    <string name="what_is_lorem_ipsum">What is Lorem Ipsum?</string>
    <string name="firstpprivacyttext"><![CDATA[Lorem Ipsum  is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,]]></string>
    <string name="remaining_balance">Remaining Balance</string>
    <string name="total_balance">Total Balance</string>
    <string name="edit">Edit</string>
    <string name="add_account">Add Account</string>
    <string name="_200">200</string>

    <string name="language_settings_title">Language Settings</string>
    <string name="language_settings_info">Language preference applies across the entire app</string>
    <string name="lang_english">English</string>
    <string name="lang_bangla">বাংলা</string>
    <string name="lang_hindi">हिन्दी</string>
    <string name="lang_arabic">العربية</string>
    <string name="lang_spanish">Español</string>


    <string name="export_format">Format</string>
    <string name="export_range">Range</string>
    <string name="export_scope">Scope</string>
    <string name="export">Export</string>
    <string name="share">Share</string>
    <string name="export_saved">Export saved to Downloads</string>
    <string name="export_failed">Export failed</string>
    <string name="export_failed_with_reason">Export failed: %1$s</string>
    <string-array name="export_formats">
        <item>CSV</item>
        <item>PDF</item>
        <item>JSON</item>
    </string-array>
    <string-array name="export_ranges">
        <item>Monthly</item>
        <item>Yearly</item>
        <item>All Time</item>
    </string-array>
    <string-array name="export_scopes">
        <item>Transactions Only</item>
        <item>Accounts Only</item>
        <item>Budgets Only</item>
        <item>All Data</item>
    </string-array>


    <!-- Feedback -->
    <string name="title_feedback">Feedback</string>
    <string name="feedback_rate_que">How would you rate our app?</string>
    <string name="feedback_hint">Write your feedback here...</string>
    <string name="feedback_contact_hint">Your email (optional)</string>
    <string name="feedback_submit">Submit</string>
    <string name="feedback_submitted">Feedback submitted successfully</string>
    <string name="feedback_select_rating">Please select a rating</string>
    <string name="feedback_thanks_improve">Thanks for your feedback! We’ll work on improvements.</string>
    <string name="feedback_love_prompt_title">Thank you!</string>
    <string name="feedback_love_prompt_msg">Would you like to rate us on the Play Store?</string>
    <string name="feedback_rate_playstore">Rate on Play Store</string>

</resources>